# mycsvanalyzer

./: .gitignore  MEMORY_OPTIMIZATION.md  README.md  environment.env  mynotes.txt  pyproject.toml  requirements.txt  test_parquet_fix.py
src/: Untitled.ipynb  analyze_csv.py  app.py  chunk_382.csv_mappings.json  chunk_383.csv  chunk_383.csv_mappings.json  chunk_384.csv  chunk_384.csv_mappings.json  cities 2.json  cities.json  cities.txt  cities_copy.json  countries.txt  createcity.py  csv_convertbigcsv.py  csv_split_to_csv_files.py  csv_split_to_parquet_files.py  daily_analysis.py  discount_report.py  enhanced_query.py  final_summary.py  hourly_analysis.py  hourly_discount_analysis.py  load_csv_to_df.py  load_csv_to_dfback\.py  main.py  main_copy.py  parameter.db  parameters.db  params_to_save.json  query_database  query_database.py  query_database_copy.py  query_sales_by_income.py  rebuild_csv.py  retail_analysis.py  retail_menu.py  save_parameter.py  timeseries.py  transformed_data.db  (+2 more)
src/PARQUET/: chunks_metadata.json
test/: test_all_programs.py  test_api.py  test_discount_dates.py  test_script.py  test_system.py
