[project]
name = "mycsvanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "Pydantic",
    "openai",
    "python-dotenv>=1.0.0",
    "tqdm",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
