[project]
name = "myduckdbdata"
version = "0.1.0"
description = "Retail Sales Time Series Database and API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.2",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "pydantic>=2.0.0",
    "numpy>=2.3.5",
    "psutil>=7.1.3",
    "tqdm>=4.67.1",
    "matplotlib>=3.0.0",
    "httpx>=0.25.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
